fix: improve scrollbar behavior

--- a/src/index.css
+++ b/src/index.css
@@ -24,10 +24,9 @@ html.dark {
 }
 
 html {
-  min-width: 100vw;
+  max-width: 100%;
   min-height: 100vh;
   overflow-y: auto;
-  overflow-x: hidden;
 }
 
 body {
